# apps/admin-backend/swagger.json
@@ -229,7 +229,7 @@
             "name": "season",
             "required": true,
             "in": "query",
-            "description": "조회할 강의가 속한 학기의 학기(예: Summer, Winter)입니다.",
+            "description": "조회할 강의가 속한 학기의 시즌(예: Summer, Winter)입니다.",
             "schema": {
               "enum": [
                 "Spring",
@@ -348,6 +348,39 @@
       }
     },
     "/task": {
+      "post": {
+        "operationId": "TaskController_createTask",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTaskDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "새로운 과제를 생성합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TaskEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "과제 생성에 실패했습니다."
+          }
+        },
+        "summary": "새로운 과제 생성",
+        "tags": [
+          "Task"
+        ]
+      },
       "get": {
         "operationId": "TaskController_getTasksByLecture",
         "parameters": [
@@ -380,39 +413,6 @@
           }
         },
         "summary": "특정 강의의 과제 목록 조회",
-        "tags": [
-          "Task"
-        ]
-      },
-      "post": {
-        "operationId": "TaskController_createTask",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateTaskDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "새로운 과제를 생성합니다.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/TaskEntity"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "과제 생성에 실패했습니다."
-          }
-        },
-        "summary": "새로운 과제 생성",
         "tags": [
           "Task"
         ]
@@ -536,6 +536,39 @@
       }
     },
     "/problem": {
+      "post": {
+        "operationId": "ProblemController_createProblem",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateProblemDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "새로운 문제를 생성합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "문제 생성에 실패했습니다."
+          }
+        },
+        "summary": "새로운 문제 생성",
+        "tags": [
+          "Problem"
+        ]
+      },
       "get": {
         "operationId": "ProblemController_getProblemsByTask",
         "parameters": [
@@ -568,39 +601,6 @@
           }
         },
         "summary": "특정 과제의 문제 목록 조회",
-        "tags": [
-          "Problem"
-        ]
-      },
-      "post": {
-        "operationId": "ProblemController_createProblem",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateProblemDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "새로운 문제를 생성합니다.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemEntity"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "문제 생성에 실패했습니다."
-          }
-        },
-        "summary": "새로운 문제 생성",
         "tags": [
           "Problem"
         ]
@@ -907,7 +907,7 @@
         },
         "summary": "특정 학기의 수강생 목록 조회",
         "tags": [
-          "StudentLecture"
+          "Student Lecture"
         ]
       }
     },
@@ -935,7 +935,7 @@
         },
         "summary": "새로운 학생과 강의 로그 생성",
         "tags": [
-          "StudentLecture"
+          "Student Lecture"
         ]
       }
     },
@@ -966,7 +966,248 @@
         },
         "summary": "새로운 여러 학생과 강의 로그 생성",
         "tags": [
-          "StudentLecture"
+          "Student Lecture"
+        ]
+      }
+    },
+    "/refund-policy": {
+      "post": {
+        "operationId": "RefundPolicyController_createRefundPolicy",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateRefundPolicyDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "새로운 환급 정책을 생성합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RefundPolicyEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책 생성에 실패했습니다."
+          }
+        },
+        "summary": "새로운 환급 정책 생성",
+        "tags": [
+          "Refund Policy"
+        ]
+      },
+      "get": {
+        "operationId": "RefundPolicyController_getRefundPoliciesBySemester",
+        "parameters": [
+          {
+            "name": "year",
+            "required": true,
+            "in": "query",
+            "description": "조회할 환급 정책이 속한 학기의 연도입니다.",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "season",
+            "required": true,
+            "in": "query",
+            "description": "조회할 환급 정책이 속한 학기의 시즌(예: Summer, Winter)입니다.",
+            "schema": {
+              "enum": [
+                "Spring",
+                "Summer",
+                "Fall",
+                "Winter"
+              ],
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "특정 학기의 모든 환급 정책을 반환합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/RefundPolicyEntity"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책을 조회하는 데 실패했습니다."
+          }
+        },
+        "summary": "특정 학기의 환급 정책 조회",
+        "tags": [
+          "Refund Policy"
+        ]
+      }
+    },
+    "/refund-policy/multiple": {
+      "post": {
+        "operationId": "RefundPolicyController_createMultipleRefundPolicies",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "새로운 여러 환급 정책을 생성합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RefundPolicyEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책 생성에 실패했습니다."
+          }
+        },
+        "summary": "새로운 여러 환급 정책 생성",
+        "tags": [
+          "Refund Policy"
+        ]
+      }
+    },
+    "/refund-policy/{id}": {
+      "get": {
+        "operationId": "RefundPolicyController_getRefundPolicyById",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "특정 ID를 가진 환급 정책을 반환합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RefundPolicyEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책을 조회하는 데 실패했습니다."
+          },
+          "404": {
+            "description": "환급 정책을 찾을 수 없습니다."
+          }
+        },
+        "summary": "특정 환급 정책 조회",
+        "tags": [
+          "Refund Policy"
+        ]
+      },
+      "patch": {
+        "operationId": "RefundPolicyController_updateRefundPolicy",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateRefundPolicyDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "특정 ID를 가진 환급 정책을 업데이트합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RefundPolicyEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책 업데이트에 실패했습니다."
+          },
+          "404": {
+            "description": "업데이트하려는 환급 정책을 찾을 수 없습니다."
+          }
+        },
+        "summary": "특정 환급 정책 수정",
+        "tags": [
+          "Refund Policy"
+        ]
+      },
+      "delete": {
+        "operationId": "RefundPolicyController_deleteRefundPolicy",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "특정 ID를 가진 환급 정책을 삭제합니다.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RefundPolicyEntity"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "환급 정책 삭제에 실패했습니다."
+          },
+          "404": {
+            "description": "삭제하려는 환급 정책을 찾을 수 없습니다."
+          }
+        },
+        "summary": "특정 환급 정책 삭제",
+        "tags": [
+          "Refund Policy"
         ]
       }
     },
@@ -976,7 +1217,14 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
           }
         },
         "tags": [
@@ -1208,6 +1456,33 @@
           }
         }
       },
+      "CreateTaskDto": {
+        "type": "object",
+        "properties": {
+          "round": {
+            "type": "number",
+            "description": "강의 회차 (round)"
+          },
+          "practiceId": {
+            "type": "number",
+            "description": "BOJ 그룹 내 연습 ID (practiceId)"
+          },
+          "lectureId": {
+            "type": "number",
+            "description": "연결된 강의 ID (Lecture의 id 값)"
+          },
+          "minSolveCount": {
+            "type": "number",
+            "description": "출석 여부를 판단하는 최소 문제 해결 수"
+          }
+        },
+        "required": [
+          "round",
+          "practiceId",
+          "lectureId",
+          "minSolveCount"
+        ]
+      },
       "TaskEntity": {
         "type": "object",
         "properties": {
@@ -1238,33 +1513,6 @@
           "practiceId",
           "minSolveCount",
           "lectureId"
-        ]
-      },
-      "CreateTaskDto": {
-        "type": "object",
-        "properties": {
-          "round": {
-            "type": "number",
-            "description": "강의 회차 (round)"
-          },
-          "practiceId": {
-            "type": "number",
-            "description": "BOJ 그룹 내 연습 ID (practiceId)"
-          },
-          "lectureId": {
-            "type": "number",
-            "description": "연결된 강의 ID (Lecture의 id 값)"
-          },
-          "minSolveCount": {
-            "type": "number",
-            "description": "출석 여부를 판단하는 최소 문제 해결 수"
-          }
-        },
-        "required": [
-          "round",
-          "practiceId",
-          "lectureId",
-          "minSolveCount"
         ]
       },
       "CreateProblemDto": {
@@ -1571,6 +1819,120 @@
           "lectureInfo",
           "studentLectureLogInfo"
         ]
+      },
+      "CreateRefundPolicyDto": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "description": "환급 유형 (LECTURE 또는 TASK)",
+            "enum": [
+              "LECTURE",
+              "TASK"
+            ]
+          },
+          "minAttend": {
+            "type": "number",
+            "minimum": 1,
+            "description": "환급을 받기 위한 최소 출석(또는 과제 수행) 횟수"
+          },
+          "maxAttend": {
+            "type": "number",
+            "minimum": 1,
+            "description": "해당 조건이 적용되는 최대 출석(또는 과제 수행) 횟수"
+          },
+          "refundAmount": {
+            "type": "number",
+            "minimum": 1,
+            "description": "환급되는 금액의 비율 (예: 50은 50% 환급)"
+          },
+          "semesterId": {
+            "type": "number",
+            "minimum": 1,
+            "description": "해당 환급 정책이 적용되는 학기의 ID"
+          }
+        },
+        "required": [
+          "type",
+          "minAttend",
+          "maxAttend",
+          "refundAmount",
+          "semesterId"
+        ]
+      },
+      "RefundPolicyEntity": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "description": "고유 ID 값"
+          },
+          "type": {
+            "type": "string",
+            "description": "환급 유형 (LECTURE 또는 TASK)",
+            "enum": [
+              "LECTURE",
+              "TASK"
+            ]
+          },
+          "minAttend": {
+            "type": "number",
+            "description": "해당 환급조건의 최소 출석 횟수"
+          },
+          "maxAttend": {
+            "type": "number",
+            "description": "해당 환급조건의 최대 출석 횟수"
+          },
+          "refundAmount": {
+            "type": "number",
+            "description": "환급되는 금액의 비율"
+          },
+          "semesterId": {
+            "type": "number",
+            "description": "해당 환급 정책이 적용되는 학기의 ID"
+          }
+        },
+        "required": [
+          "id",
+          "type",
+          "minAttend",
+          "maxAttend",
+          "refundAmount",
+          "semesterId"
+        ]
+      },
+      "UpdateRefundPolicyDto": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "description": "환급 유형 (LECTURE 또는 TASK)",
+            "enum": [
+              "LECTURE",
+              "TASK"
+            ]
+          },
+          "minAttend": {
+            "type": "number",
+            "minimum": 1,
+            "description": "환급을 받기 위한 최소 출석(또는 과제 수행) 횟수"
+          },
+          "maxAttend": {
+            "type": "number",
+            "minimum": 1,
+            "description": "해당 조건이 적용되는 최대 출석(또는 과제 수행) 횟수"
+          },
+          "refundAmount": {
+            "type": "number",
+            "minimum": 1,
+            "description": "환급되는 금액의 비율 (예: 50은 50% 환급)"
+          },
+          "semesterId": {
+            "type": "number",
+            "minimum": 1,
+            "description": "해당 환급 정책이 적용되는 학기의 ID"
+          }
+        }
       },
       "SignInDto": {
         "type": "object",
